# python

./: .gitignore  .test.sh  CHANGELOG.md  CONTRIBUTING.md  README.md  TEST.md  TODO.md  WHY.md  publish.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py  test_endpoints.py  test_import.py  uripoint_config.yaml
examples/: create_endpoints.sh  demo_all.py  process_example.py  router_example.py  server_example.py
examples/encrypted_video/: Dockerfile  README.md  config.py  docker-compose.yml  encrypted_player.html  hls.sh  requirements.txt  run_encrypted_demo.sh  setup_encrypted_video.sh  test_encrypted_video.py
examples/endpoint_demo/: README.md  order_service.py  product_service.py  requirements.txt  start_services.sh  test_services.sh  user_service.py
examples/ffmpeg/: README.md
examples/presentation/: README.md  encrypted_player.html  live_stream_demo.md  player.html  run_demo.sh  run_encrypted_demo.sh  run_security_demo.sh  setup_and_test_video.sh  setup_encrypted_video.sh  setup_security.sh  setup_video_endpoints.sh  test_security.py  test_stream.py  test_video_endpoints.py
examples/protocol_examples/: amqp_example.py  coap_example.py  dns_example.py  graphql_example.py  grpc_example.py  ldap_example.py  mqtt_example.py  mqtt_iot_example.py  redis_example.py  smtp_example.py  (+3 more)
tests/: test_chaos.py  test_integration.py  test_iot.py  test_performance.py  test_process.py  test_protocols.py  test_router.py  test_streaming.py
uripoint/: __init__.py  cli.py  main.py  process.py  process_utils.py  protocols.py  router.py
(+26 files in other folders)
